--- a/Templateform_For_App_Swift/Podfile
+++ b/Templateform_For_App_Swift/Podfile
@@ -2,13 +2,13 @@
 platform :ios,'9.0'
 
 
-target 'Templateform_For_App_Swift' do
+target 'TemplateformSwift' do
     #高斯模糊
 #    pod 'DynamicBlurView'
 #    #网络判断
 #    pod 'ReachabilitySwift'
 #    #AFN网络请求Swift版
-#    pod 'Alamofire'
+    pod 'Alamofire'
 #    #自动布局MasonrySwift版
 #    pod 'SnapKit', '~> 4.0.0'
 #    #图片缓存与下载
